# tsn-scenarios

./: .env.example  .envrc  .gitignore  Jenkinsfile  LICENSE  LICENSE.TXT  README.adoc  justfile  pyproject.toml
.github/workflows/: publish.yaml
ansible/: AS-start.yml  AS-stop.yml  README.adoc  ansible.cfg  inventory  logging.yml
docs/: Dockerfile  README.adoc  antora-playbook-local.yml  antora-playbook.yml  antora.yml  justfile  simple-trex-setup.md
docs/modules/ROOT/: nav.adoc
docs/modules/notes/: nav.adoc
docs/supplemental-ui/partials/: header-content.hbs  toolbar.hbs
scenarios/: tsn_scenarios.py
scenarios/istax/: base.cfg  vlan.vars
scenarios/istax/802.1AS/: common.cfg
scenarios/istax/802.1CB-frer/: 1.cfg  replication.cfg  vars
scenarios/istax/802.1CB-stream-ident/: 4.cfg
scenarios/istax/802.1Qbv/: basic.cfg  pass.cfg
scenarios/istax/802.1Qci-flow-meter/: 2.cfg
scenarios/istax/802.1Qci-stream-gate/: 1.cfg  2.cfg  3.cfg  4.cfg  SwRunCfgPSFP_S1  SwRunCfgPSFP_S2  SwRunCfgPSFP_S3  SwRunCfgPSFP_S4  (+5 more)
scenarios/ixnetwork/: IxNetwork.py  README.adoc  conftest.py  ixnetwork_restpy_helpers.py  pyproject.toml
scenarios/ixnetwork/802.1CB-frer/: 1.py  conftest.py  ixnetwork_restpy_helpers.py  pyproject.toml  test_1.py  test_replication.py
tools/: python.justfile
tools/istax/: README.adoc  pyproject.toml
tools/istax/src/istax/: __init__.py  cli.py  istax.py
tools/istaxcfg/: README.adoc  board_info.yaml  istaxcfg  justfile
tools/ixn/: IxNetwork.py  IxValidate.py  README.adoc  ixn.py  pyproject.toml
tools/ixn/src/ixn/: IxNetwork.py  ixn.py
(+105 files in other folders)
