[project]
name = "istax"
version = "0.3.0"
description = "A library and CLI for download/upload of IStaX switch configuration."
requires-python = ">=3.11"
dependencies = [
  "argcomplete>=3.5.3",
  "python-dotenv>=1.1.1",
  "requests[socks]>=2.32.4",
  "jinja2>=3.1.6",
  "yaspin>=3.3.0",
]

[project.scripts]
istax = "istax.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
